manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rider-service
spec:
  selector:
    app: rider-service
  ports:
    - protocol: TCP
      port: 1234
